deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysite
  labels:
    function: webserver
spec:
  containers:
  - name: httpd
    image: ghcr.io/galaxytiger/cis-92:milestone-4.2
    ports:
    - containerPort: 8000
