deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite
  annotations:
    external-dns.alpha.kubernetes.io/hostname: esatunolatienes.com.,www.esatunolatienes.com.
spec:
  type: LoadBalancer 
  selector:
    function: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
